syntax = "proto3";

package grpc;

option go_package = "./pb";


message User {
    bytes id = 1;
    string name = 2;
    string email = 3;
}

message UserRequest {
    User user = 1;
}

message UserResponse {
    User user = 1;
}

service UserService {
    rpc CreateUser(UserRequest) returns (UserResponse) {};
}